--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,22 @@
+h1 {
+    display: inline;
+    font-size: 40px;
+}
+
+ul {
+    list-style-type: none;
+    float: right;
+    padding: 0;
+}
+
+li {
+    display: inline;
+}
+
+table {
+    clear: both;
+}
+
 thead {
     background-color: lightblue;
 }
