--- a/css/main.css
+++ b/css/main.css
@@ -1,16 +1,21 @@
+#header {
+    position: relative;
+    margin-bottom: 1em;
+    height: 3em;
+}
+
 h1 {
-    display: inline;
-    font-size: 40px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    margin: 0;
+    font-size: 2em;
 }
 
-ul {
-    list-style-type: none;
-    float: right;
-    padding: 0;
-}
-
-li {
-    display: inline;
+#control-buttons {
+    position: absolute;
+    right: 0;
+    bottom: 0;
 }
 
 button {
@@ -22,10 +27,6 @@ button {
 button:hover {
     border: 1px solid gray;
     border-radius: .5em;
-}
-
-table {
-    clear: both;
 }
 
 thead {
