Added truncating of folder column
Adds ellipsis when the name of the folder exceeds a specified maximum
width (in pixels).

--- a/css/main.css
+++ b/css/main.css
@@ -41,3 +41,10 @@ thead {
     background-color: lightblue;
 }
 
+.folder-cell {
+    max-width: 150px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
