--- a/css/main.css
+++ b/css/main.css
@@ -59,6 +59,11 @@ thead {
     width: 10%;
 }
 
+.checkbox-cell {
+    text-align: center;
+    vertical-align: middle;
+}
+
 td {
     white-space: nowrap;
     overflow: hidden;
