--- a/css/main.css
+++ b/css/main.css
@@ -60,6 +60,10 @@ thead {
     width: 10%;
 }
 
+.titled-col {
+    text-align: left;
+}
+
 .checkbox-cell {
     text-align: center;
     vertical-align: middle;
