--- a/css/main.css
+++ b/css/main.css
@@ -81,3 +81,12 @@ th, td {
     padding: 0.25em 0.5em;
 }
 
+a {
+    color: #000;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
